r46 - may, 13, 2009
    * Membre : actions > we list the first page by default (we displayed the
      20th page because of a stupid bug)
    * /web/css/pagination.css : new pager style to improve the appearance
    * Membre : indexSuccess.php > new argument is given to _pager slot. This is
      a 'params' argument in order to provider custom parameters. In this view
      we put the 'order by' parameter to keep ordering column in different pages
    * _pager.php : we process the new 'params' argument


r45 - may, 11, 2009
    * Created wiki page through web user interface.


r44 - may, 10, 2009
    * Created wiki page through web user interface.


r43 - may, 10, 2009
    * Version 1.1.0 beta


r42 - may, 10, 2009
	* Association.php : initialize() > setAssociationId is called BEFORE
	  setReference in order to fix FK constraints issues
	  

r41 - may, 10, 2009
	* Association : bilanSuccess.php : the blank line before 'total' line got
	  light grey color
	* /doc/index.html : updated
	* loginSuccess.php : we notice that that it's a beta version
	* layout.php : links to 'report bug' form has been added in the menu
	* README : new part 'troubleshooting'
	

r40 - may, 10, 2009
	* CotisationPeer : new method doSeletSumForAccountId($id)
	* Association : bilan > takes care of Cotisation objects when computing
	  total amounts
	* CotisationPeer : new method doSeletSumForAssociationId($id)
	* Association : action > bilan > action class gives the $totalCotisations to
	  the view
	* Activite.php : each method returns 0 instead of null


r39 - may, 10, 2009
	* /lib/misc\StringTools.class.php : new file
	* StringTools.class.php : new method to7bits()
	* Membre : actions > map > fixed bug when putting a string with accents
	* Membre : actions > mp > default zoom level has been set to 12 to see
	  the whole France map
	* Depense : actions > new action 'export'
	* Recette : actions > new action 'export'


r38 - may, 10, 2009